--- a/Contact.html
+++ b/Contact.html
@@ -65,16 +65,16 @@
   
 		  <hr>
 		  <ul class="social-media-list">
-			<li><a href="#" target="_blank" class="contact-icon">
+			<li><a href="https://github.com/Akshit492/College_Space_Project.git" target="_blank" class="contact-icon">
 			  <i class="fa fa-github" aria-hidden="true"></i></a>
 			</li>
-			<li><a href="#" target="_blank" class="contact-icon">
+			<li><a href="https://www.linkedin.com/in/akshit-singla-codinghero/" target="_blank" class="contact-icon">
 			  <i class="fa fa-linkedin" aria-hidden="true"></i></a>
 			</li>
-			<li><a href="#" target="_blank" class="contact-icon">
+			<li><a href="https://twitter.com/AkshitSingla15" target="_blank" class="contact-icon">
 			  <i class="fa fa-twitter" aria-hidden="true"></i></a>
 			</li>
-			<li><a href="#" target="_blank" class="contact-icon">
+			<li><a href="https://www.instagram.com/akshitk492/?hl=en" target="_blank" class="contact-icon">
 			  <i class="fa fa-instagram" aria-hidden="true"></i></a>
 			</li>       
 		  </ul>
@@ -87,6 +87,7 @@
 	</div>
 	
   </section>
+  
 </body>  
 	</html>
 	
