--- a/notes.html
+++ b/notes.html
@@ -25,6 +25,11 @@
 <div class="Sem"><img src="yellow.png" width="42" height="42"><a href="https://drive.google.com/drive/folders/1Wu7PJPEyI-Xf1hgzDa52z2lNUqEpuof3?usp=sharing"> SEMESTER 1</a>
     <img src="yellow.png" width="42" height="42">
     <a href="https://drive.google.com/drive/folders/1-hiKeRVO3rZX16cEWTILmSAJY2tXjLXY?usp=sharing"> SEMESTER 2</a>
+    <br>
+    <br>
+
+    <a href="#" target="_blank"> Upload A document <i class="fa fa-upload" aria-hidden="true"></i></a>
+
 </div>
 </body>
 </html>
